# Practice_CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dockerfile  sample_in.txt  sample_out.txt
Practice/: CMakeLists.txt  practice.cpp
src/: 1_LocalVariables.cpp  CMakeLists.txt
src/10_move_semantics/: 101_move_operators.cpp  102_move_only_class.cpp  103_capture_by_move.cpp  104_rule_of_five.cpp  105_immovable_uncopyable_class.cpp  106_function_arguments_move_semantics.cpp  107_reference_collapsing.cpp  108_forward_reference.cpp  109_perfect_forwarding.cpp  110_perfect_forwarding.cpp  CMakeLists.txt
src/11_smart_pointers/: 111_unique_pointers.cpp  112_unique_pointers.cpp  113_factory_patter_unique_pointers.cpp  114_pImpl.cpp  115_shared_ptr.cpp  116_weak_ptr.cpp  CMakeLists.txt
src/12_Miscellanous_features/: 121_chrono.cpp  122_bitsets.cpp  123_tuple.cpp  124_union.cpp  125_bind.cpp  126_callable_objs.cpp  CMakeLists.txt
src/13_compile_time_programming/: 131_macros.cpp  132_constexpr.cpp  133_class_templates.cpp  134_template_specialization.cpp  135_variadic_templates_functions.cpp  136_template_recursion.cpp  137_template_with_functors.cpp  138_decltype.cpp  CMakeLists.txt
src/14_Linux/: CMakeLists.txt
src/4_FileOperations/: 18_file_streams.cpp  19_streams_buffers.cpp  20_unbuffered_input_output.cpp  24_floating_point_formats.cpp  27_binary_files.cpp
src/5_Special_Member_Functions_And_Operators/: 29_copy_constructor.cpp  30_assignment_operator.cpp  31_synthesized_member_functions.cpp  32_copy_elision.cpp  33_implicit_conversion.cpp  34_operators_and_overloading.cpp  35_friend.cpp  36_member_non_members.cpp  37_addition_operators.cpp  38_equality_inequality.cpp  39_prefix_postfix.cpp  40_function_operator_functors.cpp  CMakeLists.txt
src/6_Algorithms_Lamda/: 41_algorithms.cpp  42_algorithm_if_version.cpp  43_Lamda_Expression.cpp  44_assignment.cpp  45_lambda_expression_practical.cpp  46_lambda_expression_and_capture.cpp  47_assignment.cpp  48_lambda_expression_and_partial_evaluation.cpp  49_lamda_expressions_c++14.cpp  50_assignment.cpp  51_pair.cpp  52_pair_insert_iterators.cpp  CMakeLists.txt
src/7_Algorithms/: 53_Algorithm.cpp  53_algorithm.cpp  54_algorithm.cpp  55_write_algorithms.cpp  56_removing_algorithm.cpp  57_merging_algorithm.cpp  58_reordering_algorithm.cpp  59_Partitioning_algorithm.cpp  60_sorting_algorithm.cpp  61_permutations.cpp  62_numeric_algorithm.cpp  63_random_numbers.cpp  64_random_numbers.cpp  65_random_numbers_algorithm.cpp  66_palindrome_checker_STL.cpp  CMakeLists.txt
src/8_containers/: 67_forward_list.cpp  68_ordered_set.cpp  69_ordered_map.cpp  70_unordered_hash_table.cpp  71_associative_containers_custom_types.cpp  72_nested_maps.cpp  73_queue.cpp  74_stack.cpp  75_emplacement.cpp  76_master_board_game.cpp  77_Inheritance_Polymorphism.cpp  78_virtual_functions_cpp.cpp  79_final.cpp  80_assignment.cpp  81_destructors.cpp  CMakeLists.txt
src/9_Error_handling_exceptions/: 82_exceptions.cpp  83_stack_unwinding.cpp  CMakeLists.txt
src/FileOperations/: 18_file_streams.cpp  21_file_modes.cpp  22_stream_member_function_state.cpp  23_stream_manipulators.cpp  25_string_streams.cpp  26_random_access_to_stream.cpp  28_Assignment.cpp  CMakeLists.txt
