add_executable(localVariable 1_LocalVariables.cpp)

add_subdirectory(4_FileOperations)
add_subdirectory(5_Special_Member_Functions_And_Operators)
add_subdirectory(6_Algorithms_Lamda)
add_subdirectory(7_Algorithms)
add_subdirectory(8_containers)
add_subdirectory(9_Error_handling_exceptions)
add_subdirectory( 10_move_semantics )
add_subdirectory( 11_smart_pointers )
add_subdirectory( 12_Miscellanous_features )

