add_executable( 101_move_operators 101_move_operators.cpp )
add_executable( 102_move_only_class 102_move_only_class.cpp )
add_executable( 103_capture_by_move 103_capture_by_move.cpp )
add_executable( 104_rule_of_five 104_rule_of_five.cpp )
add_executable( 105_immovable_uncopyable_class 105_immovable_uncopyable_class.cpp )
add_executable( 106_function_arguments_move_semantics 106_function_arguments_move_semantics.cpp )
add_executable( 107_reference_collapsing 107_reference_collapsing.cpp )
add_executable( 108_forward_reference 108_forward_reference.cpp )
add_executable( 109_perfect_forwarding 109_perfect_forwarding.cpp )
add_executable( 110_perfect_forwarding 110_perfect_forwarding.cpp )