add_executable( 29_copy_constructor 29_copy_constructor.cpp)
add_executable( 30_assignment_operator 30_assignment_operator.cpp)
add_executable( 31_synthesized_member_functions 31_synthesized_member_functions.cpp)
add_executable( 32_copy_elision 32_copy_elision.cpp)
add_executable( 33_implicit_conversion 33_implicit_conversion.cpp)
add_executable( 34_operators_and_overloading 34_operators_and_overloading.cpp)
add_executable( 35_friend 35_friend.cpp)
add_executable( 36_member_non_members 36_member_non_members.cpp)
add_executable( 37_addition_operators 37_addition_operators.cpp)
add_executable( 38_equality_inequality 38_equality_inequality.cpp)
add_executable( 39_prefix_postfix 39_prefix_postfix.cpp)
add_executable( 40_function_operator_functors 40_function_operator_functors.cpp)