add_executable( 41_algorithms 41_algorithms.cpp)
add_executable( 42_algorithm_if_version 42_algorithm_if_version.cpp)
add_executable( 43_Lamda_Expression 43_Lamda_Expression.cpp)
add_executable( 44_assignment 44_assignment.cpp)
add_executable( 45_lambda_expression_practical 45_lambda_expression_practical.cpp)
add_executable( 46_lambda_expression_and_capture 46_lambda_expression_and_capture.cpp)
add_executable( 47_assignment 47_assignment.cpp)
add_executable( 48_lambda_expression_and_partial_evaluation 48_lambda_expression_and_partial_evaluation.cpp)
add_executable( 49_lamda_expressions_c++14 49_lamda_expressions_c++14.cpp)
add_executable( 50_assignment 50_assignment.cpp)
add_executable( 51_pair 51_pair.cpp)
add_executable( 52_pair_insert_iterators 52_pair_insert_iterators.cpp)
