  add_executable( 53_algorithm 53_algorithm.cpp )
  add_executable( 54_algorithm 54_algorithm.cpp )
  add_executable( 55_write_algorithms 55_write_algorithms.cpp )
  add_executable( 56_removing_algorithm 56_removing_algorithm.cpp )
  add_executable( 57_merging_algorithm 57_merging_algorithm.cpp )
  add_executable( 58_reordering_algorithm 58_reordering_algorithm.cpp )
  add_executable( 59_Partitioning_algorithm 59_Partitioning_algorithm.cpp)
  add_executable( 60_sorting_algorithm 60_sorting_algorithm.cpp )
  add_executable( 61_permutations 61_permutations.cpp )
  add_executable( 62_numeric_algorithm 62_numeric_algorithm.cpp )
  add_executable( 63_random_numbers 63_random_numbers.cpp )
  add_executable( 64_random_numbers 64_random_numbers.cpp )
  add_executable( 65_random_numbers_algorithm 65_random_numbers_algorithm.cpp )
  add_executable( 66_palindrome_checker_STL 66_palindrome_checker_STL.cpp )
