add_executable( 67_forward_list 67_forward_list.cpp )
add_executable( 68_ordered_set 68_ordered_set.cpp )
add_executable( 69_ordered_map 69_ordered_map.cpp )
add_executable( 70_unordered_hash_table 70_unordered_hash_table.cpp )
add_executable( 71_associative_containers_custom_types 71_associative_containers_custom_types.cpp )
add_executable( 72_nested_maps 72_nested_maps.cpp )
add_executable( 73_queue 73_queue.cpp )
add_executable( 74_stack 74_stack.cpp )
add_executable( 75_emplacement 75_emplacement.cpp )
add_executable( 76_master_board_game 76_master_board_game.cpp )
add_executable( 77_Inheritance_Polymorphism 77_Inheritance_Polymorphism.cpp )
add_executable( 78_virtual_functions_cpp 78_virtual_functions_cpp.cpp )
add_executable( 79_final 79_final.cpp )
add_executable( 80_assignment 80_assignment.cpp )
add_executable( 81_destructors 81_destructors.cpp )
add_executable( 81_Interfaces 81_Interfaces.cpp )
