add_executable( 18_fileStreams 18_file_streams.cpp)
add_executable( 19_StreamsBuffer 19_streams_buffers.cpp)
add_executable( 20_unbuffered_input_output 20_unbuffered_input_output.cpp)
add_executable( 21_file_modes 21_file_modes.cpp)
add_executable( 22_stream_member_function_state 22_stream_member_function_state.cpp)
add_executable( 23_stream_manipulators 23_stream_manipulators.cpp)
add_executable( 24_floating_point_formats 24_floating_point_formats.cpp)
add_executable( 25_string_streams 25_string_streams.cpp)
add_executable( 26_random_access_to_stream 26_random_access_to_stream.cpp)
add_executable( 27_binary_files 27_binary_files.cpp)